-
Bug
-
Resolution: Fixed
-
P2
-
8u202, 9, 10, 11, 12, 13
-
b09
-
Not verified
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8219135 | 12.0.2 | Semyon Sadetsky | P2 | Closed | Fixed | b01 |
JDK-8219124 | 11.0.4-oracle | Semyon Sadetsky | P2 | Closed | Fixed | b01 |
JDK-8221104 | 11.0.4 | Semyon Sadetsky | P2 | Resolved | Fixed | b01 |
JDK-8221229 | openjdk8u222 | Semyon Sadetsky | P2 | Resolved | Fixed | b01 |
JDK-8219177 | 8u222 | Semyon Sadetsky | P2 | Resolved | Fixed | master |
JDK-8219137 | 8u221 | Semyon Sadetsky | P2 | Closed | Fixed | b01 |
JDK-8224376 | emb-8u221 | Semyon Sadetsky | P2 | Resolved | Fixed | master |
For example for JOptionPane with a text field, the default text in the field prompt is not highlighted for GTKLookAndFeel
- backported by
-
JDK-8219177 JOptionPane display issue with GTKLookAndFeel
-
- Resolved
-
-
JDK-8221104 JOptionPane display issue with GTKLookAndFeel
-
- Resolved
-
-
JDK-8221229 JOptionPane display issue with GTKLookAndFeel
-
- Resolved
-
-
JDK-8224376 JOptionPane display issue with GTKLookAndFeel
-
- Resolved
-
-
JDK-8219124 JOptionPane display issue with GTKLookAndFeel
-
- Closed
-
-
JDK-8219135 JOptionPane display issue with GTKLookAndFeel
-
- Closed
-
-
JDK-8219137 JOptionPane display issue with GTKLookAndFeel
-
- Closed
-
- relates to
-
JDK-8219012 Release Note: GTK+ 3.20 and Later Unsupported by Swing
-
- Closed
-
-
JDK-8218469 JSlider display issue with slider for GTKLookAndFeel
-
- Closed
-