8218473: JOptionPane display issue with GTKLookAndFeel

Reviewed-by: prr, serb